# orto_approx_cpp

./: CMakeLists.txt  appox_orto_save.cpp  approx.cpp  approx_orto.cpp  approx_orto.h  approx_t.cpp  main.cpp
